--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link rel="stylesheet" href="styles.6f1fb5ff4237376e5b0c.css"></head>
 <body>
   <app-root></app-root>
   <!-- Place this tag in your head or just before your close body tag. -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
-</body>
+<script type="text/javascript" src="runtime.06daa30a2963fa413676.js"></script><script type="text/javascript" src="polyfills.677bdac3385565b157aa.js"></script><script type="text/javascript" src="scripts.869eb1b32225c28762d6.js"></script><script type="text/javascript" src="main.3ac94d70078092343af7.js"></script></body>
 </html>
